DAM-42: Notify asset access request (#47)